--- a/univrsite.html
+++ b/univrsite.html
@@ -7,7 +7,8 @@
     <link rel="styleSheet" href="univ.css">
     <title>Univrsite</title>
     <meta name="description" content="Presentation hotele">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1280, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 </head>
 
 <body>
@@ -52,7 +53,7 @@
                     <li><a href="#">Research</a></li>
                 </ul>
                 <div>
-                    <h2><a href="#">Give to Lamar</a></h2>
+                    <h2  ><a href="#">Give to Lamar</a></h2>
                 </div>
             </nav>
         </header>
@@ -71,25 +72,27 @@
             <div class="event-box">
                 <h2>Spring Open House</h2>
                 <p>Découvrez Lamar University lors de notre journée portes ouvertes le samedi, 25 février.</p>
-                <a href="#" class="btn">Sign Up Now </a>
+                <div class="event-link-container">
+                    <a href="#">
+                        <span>Sign Up Now</span>
+                    </a>
+                </div>
             </div>
         </section>
-        
-
-
 
         <section class="buttons">
-            <a href="#" class="btn">Prospective Students</a>
-            <a href="#" class="btn">Current Students</a>
-            <a href="#" class="btn">Alumni & Friends</a>
-            <a href="#" class="btn">Faculty & Staff</a>
-            <a href="#" class="btn">Quicklinks</a>
+            <a href="#" class="btn">PROSPECTIVE STUDENTS </a>
+            <a href="#" class="btn">CURRENT STUDENT</a>
+            <a href="#" class="btn">ALUMNI & FRIENDS</a>
+            <a href="#" class="btn">FACULTY & STAFF & Staff</a>
+            <a href="#" class="btn">QUICKLINKS</a>
         </section>
 
         <section class="campaign">
             <h3>Campaign goal increased to $125 million</h3>
             <div class="campaign-details">
                 <p><strong>Investing In The Future</strong></p>
+                <p>The CAMPAIGN FOR UOR UNIVERSITY</p>
                 <p>Notre campagne a déjà atteint $95 millions, et un nouvel objectif de $125 millions a été fixé.</p>
                 <a href="#">Read more...</a>
             </div>
