disposition du main

--- a/univrsite.html
+++ b/univrsite.html
@@ -12,91 +12,120 @@
 </head>
 
 <body>
-        <!-- En-tête principal -->
-        <header>
-            <nav class="top-nav">
-                <div class="container">
-                    <ul>
-                        <li><a href="#">myLamar</a></li>
-                        <li><a href="#">LU Online</a></li>
-                        <li><a href="#">Library</a></li>
-                        <li><a href="#">Campus Map</a></li>
-                        <li><a href="#">Directory</a></li>
-                        <li><a href="#">Jobs@LU</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                    <div class="search">
-                        <input type="text" placeholder="Search...">
-                        <button>Go</button>
+    <!-- En-tête principal -->
+    <header>
+        <nav class="top-nav">
+            <div class="container">
+                <span class="menu-burger" onclick="toggleMenu()"> <!-- Menu burger -->
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <ul>
+                    <li><a href="#">myLamar</a></li>
+                    <li><a href="#">LU Online</a></li>
+                    <li><a href="#">Library</a></li>
+                    <li><a href="#">Campus Map</a></li>
+                    <li><a href="#">Directory</a></li>
+                    <li><a href="#">Jobs@LU</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+                <div class="search">
+                    <input type="text" placeholder="Search...">
+                    <button>Go</button>
+                </div>
+            </div>
+        </nav>
+
+        <div class="branding">
+            <div class="logo">
+                <!-- Forme géométrique -->
+                <div class="logo-shape"></div>
+            </div>
+            <div class="branding-text">
+                <h1>UOR UNIVERSITY</h1>
+                <p>A Member of The Texas State University System</p>
+            </div>
+        </div>
+
+
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#">About LU</a></li>
+                <li><a href="#">Academics</a></li>
+                <li><a href="#">Admissions</a></li>
+                <li><a href="#">Athletics</a></li>
+                <li><a href="#">Student Life</a></li>
+                <li><a href="#">News & Events</a></li>
+                <li><a href="#">Research</a></li>
+            </ul>
+            <div>
+                <h2><a href="#">Give to Lamar</a></h2>
+            </div>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <div class="image-container">
+            <button class="prev-btn">‹</button>
+            <div class="slider">
+                <img src="uor.jpeg" alt="Image 1">
+                <img src="uor1.jpeg" alt="Image 2">
+                <img src="uor2.jpeg" alt="Image 3">
+            </div>
+            <button class="next-btn">›</button>
+        </div>
+
+        <div class="event-box">
+            <h2>Spring Open House</h2>
+            <p>Découvrez Lamar University lors de notre journée portes ouvertes le samedi, 25 février.</p>
+            <div class="event-link-container">
+                <a href="#">
+                    <span>Sign Up Now</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="buttons">
+        <a href="#" class="btn">PROSPECTIVE STUDENTS </a>
+        <a href="#" class="btn">CURRENT STUDENT</a>
+        <a href="#" class="btn">ALUMNI & FRIENDS</a>
+        <a href="#" class="btn">FACULTY & STAFF & Staff</a>
+        <a href="#" class="btn">QUICKLINKS</a>
+    </section>
+
+    <main class="mainer">
+        <section class="principal">
+            <article class="campaign">
+                <h3>Campaign goal increased to $125 million</h3>
+                <div class="campaign-details">
+                    <div class="titles">
+                        <h2 class="main-title">Investing In The Future</h2>
+                        <h2 class="sub-title">THE CAMPAIGN FOR LAMAR UNIVERSITY</h2>
+                    </div>
+                    <div class="first">
+                        <p class="first-part">
+                            The university's "Investing in<br> the Future", comprehensive<br> campaign has raised $95 <br>million, nearing the $100 <br>million goal with two years
+                        </p>
+                    </div>
+                    <div class="campaign-text">
+                        <p class="second-part">
+                            remaining in the seven-year effort. Now a new goal has been set at $125 million to
+                            support<br> scholarships, academic programs, and athletics at Lamar.
+                            <a href="#" class="read-more">Read more...</a>
+                        </p>
                     </div>
                 </div>
-            </nav>
+            </article>
             
-            <div class="branding">
-                <div class="logo">
-                    <!-- Forme géométrique -->
-                    <div class="logo-shape"></div>
-                </div>
-                <div class="branding-text">
-                    <h1>UOR UNIVERSITY</h1>
-                    <p>A Member of The Texas State University System</p>
-                </div>
-            </div>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="#">About LU</a></li>
-                    <li><a href="#">Academics</a></li>
-                    <li><a href="#">Admissions</a></li>
-                    <li><a href="#">Athletics</a></li>
-                    <li><a href="#">Student Life</a></li>
-                    <li><a href="#">News & Events</a></li>
-                    <li><a href="#">Research</a></li>
-                </ul>
-                <div>
-                    <h2  ><a href="#">Give to Lamar</a></h2>
-                </div>
-            </nav>
-        </header>
 
-        <section class="hero">
-            <div class="image-container">
-                <button class="prev-btn">‹</button>
-                <div class="slider">
-                    <img src="uor.jpeg" alt="Image 1">
-                    <img src="uor1.jpeg" alt="Image 2">
-                    <img src="uor2.jpeg" alt="Image 3">
-                </div>
-                <button class="next-btn">›</button>
-            </div>
-        
-            <div class="event-box">
-                <h2>Spring Open House</h2>
-                <p>Découvrez Lamar University lors de notre journée portes ouvertes le samedi, 25 février.</p>
-                <div class="event-link-container">
-                    <a href="#">
-                        <span>Sign Up Now</span>
-                    </a>
-                </div>
-            </div>
+
+            <article class="alumni">
+               <img src="uor.jpeg" alt="">
+            </article>
         </section>
 
-        <section class="buttons">
-            <a href="#" class="btn">PROSPECTIVE STUDENTS </a>
-            <a href="#" class="btn">CURRENT STUDENT</a>
-            <a href="#" class="btn">ALUMNI & FRIENDS</a>
-            <a href="#" class="btn">FACULTY & STAFF & Staff</a>
-            <a href="#" class="btn">QUICKLINKS</a>
-        </section>
-
-        <section class="campaign">
-            <h3>Campaign goal increased to $125 million</h3>
-            <div class="campaign-details">
-                <p><strong>Investing In The Future</strong></p>
-                <p>The CAMPAIGN FOR UOR UNIVERSITY</p>
-                <p>Notre campagne a déjà atteint $95 millions, et un nouvel objectif de $125 millions a été fixé.</p>
-                <a href="#">Read more...</a>
-            </div>
-        </section>
 
         <section class="news-events">
             <div class="news">
@@ -107,19 +136,24 @@
                 <h4>Events Calendar</h4>
                 <p>Faculty Development Workshop: Dr. Patricia Alexander</p>
             </div>
+            <div class="Become">
+                <img src="asi.jpg" alt="etudier">
+                <div>
+                    <h4>Become a Student</h4>
+                    <p>Uor</p>
+
+                </div>
+
+            </div>
         </section>
 
-        <section class="alumni">
-            <h4>LU Honors Alumni</h4>
-            <p>Alumni of Distinction</p>
-            <a href="#" class="btn">Make Your Reservation</a>
-        </section>
-        </main>
 
-        <!-- Pied de page -->
-        <footer>
-            <p>&copy; 2024 Lamar University. Tous droits réservés.</p>
-        </footer>
+    </main>
+
+    <!-- Pied de page -->
+    <footer class="footer">
+        <p>&copy; 2024 Lamar University. Tous droits réservés.</p>
+    </footer>
 
     <script>
         const slider = document.querySelector('.slider');
@@ -147,6 +181,15 @@
         // Initialisation
         updateSlider();
 
+    </script>
+    <script>
+        function toggleMenu() {
+            const menu = document.querySelector('.top-nav ul');
+            const burger = document.querySelector('.menu-burger');
+            menu.classList.toggle('active');
+            const isExpanded = menu.classList.contains('active');
+            burger.setAttribute('aria-expanded', isExpanded); // Mise à jour de l'accessibilité
+        }
     </script>
 
 
