--- a/univrsite.html
+++ b/univrsite.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="styleSheet" href="univ.css">
+    <link rel="styleSheet" href="univ.css?v=1.0">
     <title>Univrsite</title>
     <meta name="description" content="Presentation hotele">
     <meta name="viewport" content="width=1280, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -41,6 +41,7 @@
             <div class="logo">
                 <!-- Forme géométrique -->
                 <div class="logo-shape"></div>
+                <div class="logo-etoile"></div>
             </div>
             <div class="branding-text">
                 <h1>UOR UNIVERSITY</h1>
@@ -106,7 +107,8 @@
                     </div>
                     <div class="first">
                         <p class="first-part">
-                            The university's "Investing in<br> the Future", comprehensive<br> campaign has raised $95 <br>million, nearing the $100 <br>million goal with two years
+                            The university's "Investing in<br> the Future", comprehensive<br> campaign has raised $95
+                            <br>million, nearing the $100 <br>million goal with two years
                         </p>
                     </div>
                     <div class="campaign-text">
@@ -118,34 +120,36 @@
                     </div>
                 </div>
             </article>
-            
+
 
 
             <article class="alumni">
-               <img src="uor.jpeg" alt="">
+                <img src="in.png" alt="">
             </article>
         </section>
 
 
         <section class="news-events">
-            <div class="news">
-                <h4>Latest News</h4>
-                <p>LU online nursing program classé troisième au niveau national.</p>
+            <div class="egal"> 
+                <div class="news">
+                    <h4>Latest News</h4>
+                    <p><strong> online nursing program classé troisième au niveau national.</strong></p>
+                </div>
+                <div class="events">
+                    <h4>  Events Calendar</h4>
+                    <p>  <strong> Development Workshop: Dr. Patricia Alexander</strong></p>
+                </div>
             </div>
-            <div class="events">
-                <h4>Events Calendar</h4>
-                <p>Faculty Development Workshop: Dr. Patricia Alexander</p>
-            </div>
-            <div class="Become">
+            <div class="become">
                 <img src="asi.jpg" alt="etudier">
                 <div>
                     <h4>Become a Student</h4>
                     <p>Uor</p>
-
                 </div>
-
             </div>
         </section>
+        
+
 
 
     </main>
@@ -190,6 +194,8 @@
             const isExpanded = menu.classList.contains('active');
             burger.setAttribute('aria-expanded', isExpanded); // Mise à jour de l'accessibilité
         }
+
+
     </script>
 
 
